--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0"
   }
 }
